# jirasync

./: .envrc  .gitignore  environment.yml  flake.nix  jira.template.md  jirasync.example.conf  jirasync.py  pyproject.toml
