[tool.poetry]
name = "jirasync"
version = "0.1.0"
description = ""
authors = ["Alexander Braverman Masis <abraverm@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jira = {extras = ["cli"], version = "^3.5.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poetry = "poetry.console.application:main"
