[tool.poetry]
name = "jirasync"
version = "0.2.0"
description = ""
authors = ["Alexander Braverman Masis <abraverm@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jira = {extras = ["cli"], version = "^3.5.2"}
jinja2 = "^3.1.2"
python-frontmatter = "^1.0.1"
jira2markdown = "^0.3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jirasync = "jirasync:main"
